tests/baselines/reference/invalidModuleWithStatementsOfEveryKind.errors.txt
==== tests/cases/conformance/internalModules/moduleBody/invalidModuleWithStatementsOfEveryKind.ts (21 errors) ====
    // All of these should be an error
    
    module Y {
        public class A { s: string }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
    
        public class BB<T> extends A {
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
            id: number;
        }
    }
    
    module Y2 {
        public class AA<T> { s: T }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
        public interface I { id: number }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
    
        public class B extends AA<string> implements I { id: number }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
    }
    
    module Y3 {
        public module Module {
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
            class A { s: string }
        }
    }
    
    module Y4 {
        public enum Color { Blue, Red }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
    }
    
    module YY {
        private class A { s: string }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
    
        private class BB<T> extends A {
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
            id: number;
        }
    }
    
    module YY2 {
        private class AA<T> { s: T }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
        private interface I { id: number }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
    
        private class B extends AA<string> implements I { id: number }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
    }
    
    module YY3 {
        private module Module {
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
            class A { s: string }
        }
    }
    
    module YY4 {
        private enum Color { Blue, Red }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
    }
    
    
    module YYY {
        static class A { s: string }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
    
        static class BB<T> extends A {
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
            id: number;
        }
    }
    
    module YYY2 {
        static class AA<T> { s: T }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
        static interface I { id: number }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
    
        static class B extends AA<string> implements I { id: number }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
    }
    
    module YYY3 {
        static module Module {
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
            class A { s: string }
        }
    }
    
    module YYY4 {
        static enum Color { Blue, Red }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
    }
    